--- a/app/globals.css
+++ b/app/globals.css
@@ -4,14 +4,14 @@
 
 @layer components {
   .heroButton {
-    @apply px-4 py-2 border border-[#023e8a] rounded-full uppercase text-xs tracking-widest transition-all hover:border-x-neutral-50 text-gray-500 hover:text-[#023e8a/40];
+    @apply border-2 px-3 border-[#1d3557] bg-[#8ecae6] rounded-full uppercase tracking-widest;
   }
   .headerButton {
-    @apply px-4 py-2 border border-[#023e8a] rounded-full uppercase text-xs tracking-widest transition-all hover:border-x-neutral-50 text-gray-500 hover:text-[#023e8a/40];
+    @apply border-2 border-[#f1faee] rounded-full uppercase tracking-widest border-x-[#1d3557];
   }
   .contactInput {
-    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424]
-    text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AbbA]/40
-    focus:text-[#a3b18a]/80 hover:border-[#F7ABBA]/40;
+    @apply outline-none bg-[#e5e5e5] rounded-sm border-b px-6 py-4 border-[#242424]
+     placeholder-[#457b9d] transition-all focus:border-[#F7AbbA]/40
+    focus:text-[#1d3557] hover:border-[#F7ABBA]/40;
   }
 }
